Change log 1.5 (under development)
----------------------------------
* The EasyMock API extension should now work when testing Eclipse plugins and running the tests as PDE (JUnit Plugin) tests (issue 264)
* Deprecated "andReturn" in the stubber API and added "toReturn" instead. The API now reads e.g. "stub(method("methodName")).toReturn(new Object());"
* Added the "toThrow" method to the stubber API. You can now do e.g. "stub(method("methodName")).toThrow(new Exception());" (issue 182).
* Whitebox#setInternalStateFromContext now support field matching strategies. By default all context fields that matches a field in the target class or instance is copied to the instance. If the strategy is changed from MATCHING to STRICT then an exception will be thrown if the context contains a field that cannot be copied to the target  (issue 221).

Change log 1.4 (2010-07-22)
---------------------------
* Implemeted support for mocking instance methods of final system classes with the Mockito extension API (issue 169)
* Partial mocking of instance methods in final system classes not having a default constructor now works in the EasyMock extension API (issue 170)
* The deep cloner can now clone java.reflect.Method objects correctly to a different classloader.
* Fixed a critical bug in the ClassloaderExecutor which prevented it from running methods returning void. This affected the PowerMockRule which prevented it from executing test methods (even though it looked like it did) (issue 268, also closes issue 245)
* Upgraded to Javassist 3.13 (issue 269)
* Fixed some problems with Withbox regarding invocation of var args member class constructors and methods (issue 267).
* Partial mocking of public static methods now works in Mockito (issue 261)
* Better clean-up in test runner which fixes some java.lang.OutOfMemoryError errors in large test suites.

Change log 1.3.9 (2010-07-14)
----------------------------------
* Upgraded the Mockito extension API to support Mockito 1.8.5